--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,8 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "functionHeaderExtension.headerFilePath": "/home/zfarouk/Desktop/so_long/so_long.h",
   "files.associations": {
-    "so_long.h": "c"
-  }
+    "so_long.h": "c",
+    "mlx.h": "c"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
